# beacon

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README.md  ROADMAP.md  codecov.yml  justfile  pnpm-lock.yaml  pnpm-workspace.yaml  rust-analyzer.toml
crates/analyzer/: Cargo.toml  build.rs
crates/analyzer/src/: cfg.rs  const_eval.rs  cross_module_resolver.rs  data_flow.rs  embedded_stdlib_modules.rs  embedded_stubs.rs  lib.rs  linter.rs  loader.rs  pattern.rs  rules.rs  taint.rs  type_env.rs  walker.rs  workspace.rs
crates/analyzer/src/cfg/: builder.rs  call_graph.rs  graph.rs  module.rs  module_builder.rs  resolver.rs
crates/analyzer/src/fixtures/data_flow/: test_binary_op_uses_tracked.json  test_constant_propagation_boolean.json  test_constant_propagation_integer_arithmetic.json  test_constant_propagation_string_concat.json  test_data_flow_analyze_combined.json  test_evaluate_boolean_operators.json  test_evaluate_condition_with_comparison.json  test_for_loop_target_not_use_before_def.json  test_import_hoisting.json  test_import_with_alias_hoisting.json  test_module_level_class_available_in_function.json  test_module_level_function_available_in_another_function.json  test_no_use_before_def_when_all_paths_assign.json  test_parameters_not_use_before_def.json  test_sequential_assignments_no_error.json  test_simple_import_hoisting.json  test_unreachable_code_after_return.json  test_unused_variable_detection.json  test_use_before_def_detection.json  test_use_before_def_in_conditional.json  test_use_before_def_in_loop.json
crates/analyzer/src/fixtures/taint_workspace/: assignment_propagation.json  binary_op_propagation.json  command_execution_sink.json  eval_sink.json  file_read_source.json  input_to_eval_violation.json  safe_reassignment.json  user_input_source.json
crates/analyzer/src/fixtures/walker_class/: test_class_level_fields_dont_conflict_with_nested_classes.json  test_class_with_both_class_and_instance_fields.json  test_class_with_non_annotated_class_assignments.json  test_class_with_only_class_level_annotations.json  test_extract_enum_members.json  test_extract_enum_members_ignores_methods.json  test_extract_enum_members_ignores_private.json  test_synthesize_dataclass_init.json  test_synthesize_dataclass_init_respects_explicit_init.json
crates/analyzer/src/linter/: checks.rs  context.rs  symbol_rules.rs  traversal.rs
crates/analyzer/src/loader/: annotations.rs  cache.rs  class_registry.rs  stdlib.rs  typevars.rs
crates/analyzer/src/walker/: ast_utils.rs  class.rs  function.rs  guards.rs  mod.rs  utils.rs  visitors.rs
crates/analyzer/tests/: cross_module_tests.rs  transitive_type_propagation_tests.rs  ws_tests.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/benches/: workspace_analysis.rs
crates/cli/src/: analyze.rs  cfg.rs  diagnostics.rs  formatters.rs  helpers.rs  lib.rs  main.rs
crates/cli/tests/: format_tests.rs  ws.rs
crates/cli/tests/golden/: typecheck_broken.json
crates/core/: Cargo.toml
crates/core/benches/: type_inference.rs
crates/core/src/: annotation_parser.rs  class_metadata.rs  errors.rs  fixtures.rs  lib.rs  logging.rs  protocols.rs  subst.rs  suppressor.rs  types.rs  typevar.rs  typevar_registry.rs  unify.rs
crates/core/src/types/: application.rs  constructors.rs  diagnostics.rs  helpers.rs  kinding.rs  model.rs  normalization.rs  overloads.rs  schemes.rs  simplify.rs  subtyping.rs  tests.rs
crates/core/src/unify/: application.rs  compound.rs  errors.rs  records.rs  tests.rs  unions.rs  variables.rs
crates/core/tests/: overloaded_method_lookup_test.rs  typevar_protocol_bounds_test.rs
crates/server/: Cargo.toml
crates/server/benches/: lsp_handlers.rs  parser_benchmark.rs  stub_resolution_benchmark.rs
crates/server/src/: analysis.rs  backend.rs  cache.rs  config.rs  document.rs  interpreter.rs  introspection.rs  lib.rs  main.rs  parser.rs  telemetry.rs  utils.rs  workspace.rs
crates/server/src/analysis/: cfg.rs  class_metadata.rs  constraint_gen.rs  data_flow.rs  exhaustiveness.rs  linter.rs  loader.rs  mod.rs  pattern.rs  type_env.rs  walker.rs
crates/server/src/analysis/rules/: mod.rs
crates/server/src/data/: dunders.json
crates/server/src/features/: change_signature.rs  code_actions.rs  completion.rs  diagnostics.rs  document_highlight.rs  document_symbols.rs  dunders.rs  extract_function.rs  extract_variable.rs  folding_range.rs  formatting.rs  goto_definition.rs  hover.rs  inlay_hints.rs  inline_function.rs  mod.rs  move_symbol.rs  refactoring.rs  references.rs  rename.rs  semantic_tokens.rs  signature_help.rs  workspace_symbols.rs
crates/server/src/features/builtin_docs/: builtin_docs.json  mod.rs
crates/server/src/features/completion/: algorithms.rs  builtins.json  keywords.json  mod.rs
crates/server/src/formatting/: cache.rs  config.rs  context.rs  import.rs  mod.rs  rules.rs  state.rs  token_stream.rs  writer.rs
crates/server/tests/: cache_regression_tests.rs  config_tests.rs  cross_file_cfg_tests.rs  cross_file_diagnostics_tests.rs  cross_module_type_mismatch_tests.rs  formatting_regression_tests.rs  formatting_tests.rs  hm_type_checker_tests.rs  import_dependency_tracker_integration_tests.rs  imports_workspace_tests.rs  lsp_autofix_tests.rs  lsp_completion_refactoring_tests.rs  lsp_formatting_integration_tests.rs  lsp_lifecycle_diagnostics_tests.rs  magic_method_diagnostics_tests.rs  refactoring_extract_function_tests.rs  refactoring_move_symbol_tests.rs  star_import_resolution_tests.rs  stub_override_integration_tests.rs  tcp_server_tests.rs  workspace_symbol_table_integration_tests.rs  ws_tests.rs
crates/server/tests/hm_fixtures/: async_ctx.py  functional_pipeline.py  recursive_types.py  typed_api.py  union_simplification.py
crates/server/tests/hm_fixtures/errors/: occurs_check.py  variance_failure.py
crates/server/tests/hm_fixtures/typevar/: bounds_and_constraints.py
crates/server/tests/hm_fixtures/variance/: complex_hierarchies.py  contravariant.py  covariant.py  generator_mixed_variance.py  invariant.py  typevar_annotations.py
(+282 files in other folders)
