[workspace]
resolver = "2"
members = [ "crates/cli", "crates/constraints","crates/core", "crates/parser", "crates/server"]

[workspace.dependencies]
tree-sitter = "0.25.10"
thiserror = "2.0.17"
rustc-hash = "2.0"
# NOTE: This cannot change
lsp-types = "0.94.1"

[profile.dev.package."*"]
debug = true

[profile.test]
debug = true
