[workspace]
resolver = "2"
members = [ "crates/analyzer",
    "crates/cli",
    "crates/constraints",
    "crates/core",
    "crates/parser",
    "crates/server", "pkg/zed",
]

[workspace.dependencies]
tree-sitter = "0.25.10"
tree-sitter-python = "0.25"
thiserror = "2.0.17"
rustc-hash = "2.0"
# NOTE: This cannot change
lsp-types = "0.94.1"

[profile.dev.package."*"]
debug = true

[profile.test]
debug = true

[workspace.lints.clippy]
bool_comparison = "deny"
duplicate_mod = "deny"
inconsistent_struct_constructor = "deny"
invalid_regex = "deny"
mem_forget = "deny"
mixed_case_hex_literals = "deny"
suspicious_arithmetic_impl = "deny"
uninit_assumed_init = "deny"
suspicious_else_formatting = "deny"
suspicious_op_assign_impl = "deny"
suspicious_to_owned = "deny"
cmp_owned = "deny"
cmp_null = "deny"
manual_map = "deny"

too_many_arguments = "warn"
cyclomatic_complexity = "warn"
large_enum_variant = "warn"
needless_borrow = "warn"
needless_pass_by_value = "warn"
redundant_clone = "warn"
unnecessary_cast = "warn"
inefficient_to_string = "warn"
or_fun_call = "warn"
unnecessary_to_owned = "warn"
map_clone = "warn"
flat_map_identity = "warn"
needless_collect = "warn"
vec_init_then_push = "warn"

len_zero = "allow"
range_plus_one = "allow"
manual_range_contains = "allow"
