[package]
name = "beacon-cli"
version = "0.5.0"
edition = "2024"

[[bin]]
name = "beacon"
path = "src/main.rs"

[dependencies]
beacon-parser = { path = "../parser", features = ["serde"] }
beacon-lsp = { path = "../server" }
beacon-constraint = { path = "../constraints" }
beacon-core = { path = "../core" }
beacon-analyzer = { path = "../analyzer" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tree-sitter = "0.25.10"
url = "2.5"
owo-colors = "4.2"
regex = "1.11"
ignore = "0.4"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.1"
