[package]
name = "beacon-core"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
rustc-hash = "2.1"
lsp-types.workspace = true
url = "2.5.7"
indexmap = "2.12"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
chrono = "0.4"
