[package]
name = "beacon-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
beacon-core = { path = "../core" }
beacon-parser = { path = "../parser" }
lru = "0.16.2"
lsp-types.workspace = true
ropey = "1.6"
rustc-hash.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror.workspace = true
tokio = { version = "1.48.0", features = ["full"] }
tower-lsp = "0.20.0"
tree-sitter.workspace = true
tree-sitter-python = "0.25.0"
url = "2.5"
