[package]
name = "beacon-lsp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "beacon-lsp"
path = "src/main.rs"

[lib]
name = "beacon_lsp"
path = "src/lib.rs"

[dependencies]
beacon-core = { path = "../core" }
beacon-parser = { path = "../parser" }
beacon-constraint = { path = "../constraints" }
dirs = "6.0"
lru = "0.16.2"
lsp-types.workspace = true
once_cell = "1.21"
ropey = "1.6"
rustc-hash.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9"
thiserror.workspace = true
tokio = { version = "1.48.0", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter.workspace = true
tree-sitter-python.workspace = true
url = "2.5"
ignore = "0.4"
notify = "8.2"
rayon = "1.11"
regex = "1"

[dev-dependencies]
tempfile = "3.15"
